fix dynamic screen and stuck header to top in css

--- a/HLCStyles.css
+++ b/HLCStyles.css
@@ -1,30 +1,24 @@
 body {
-    display: grid;
-    min-height: 100vh;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: 1fr 25fr 1fr;
-    background-color: rgb(223, 195, 159);
+    background-color: rgb(241, 219, 190);
+    width: 96%;
+    overflow-x: hidden;
 }
 article {
-    grid-column: 2 / 3;
-    width: 100%;
-    overflow: auto;
-    overflow-x: hidden;
     display: grid;
-    grid-template-rows: 100px 1fr auto;
+    grid-template-rows: 100px 50px auto;
     padding: 0 0 20px 0;
     margin-top: 0;
-    align-items: center;
+    align-items: normal;
     justify-content: center;
     text-align: center;
-    
+    grid-template-columns: 1fr;
 }
 #navBar {
     margin: 0;
-    background-color: rgb(223, 195, 159);
+    padding: 10px 0;
+    background-color: rgb(241, 219, 190);
     justify-self: left;
 }
 #navBar ul {
@@ -33,8 +27,24 @@ article {
 }
 header {
     background-color: rgb(223, 195, 159);
-    text-align: center;
+    text-align: left;
     height: 100%;
+    position: sticky;
+    top: 8px;
+    z-index: 10;
+    box-shadow: 0 1px 10px 0 rgb(10, 10, 10);
+    border: solid 1px rgba(14, 12, 12, 0.76);
+    border-radius: 10px;
+}
+header h1 {
+    padding: 20px;
+    font-size: 2.5em;
+}
+@media screen and (max-width: 600px) {
+    header h1 {
+        font-size: 1.8em;
+        padding: 35px 10px;
+    }
 }
 main {
     box-shadow: 0 1px 10px 0 rgb(10, 10, 10);
@@ -43,10 +53,7 @@ main {
     background-color: rgba(245, 201, 144, 0.767);
     padding: 0 2% 0 2%;
 }
-header h1 {
-    padding: 20px;
-    font-size: 2.5em;
-}
+
 h4 {
     margin: 1% 1%;
 }
@@ -64,7 +71,7 @@ p {
     margin: 10px 0;
 }
 #aboutContainer h2 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: bold;
 }
 
@@ -75,7 +82,6 @@ p {
     margin: 10px 0;
     justify-content: center;
     align-items: center;
-    
 }
 #curriculumCardContainer {
     justify-self: center;
@@ -89,7 +95,6 @@ p {
     margin: 0 25px;
     padding: 20px;
     justify-content: center;
-    
 }
 .curriculumCard {
     max-width: 250px;
@@ -110,9 +115,18 @@ button {
     border: none;
     font-size: 18px;
     font-weight: bold;
-    padding: 10px 10px;
+    padding: 10px;
     color: rgba(108, 108, 123, 0.9);
 }
 #homeButton {
     width: 100px;
+}
+@media screen and (max-width: 600px) {
+    button {
+        font-size: 14px;
+        width: 150px;
+    }
+    #homeButton {
+        width: 75px;
+    }
 }
